typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck7.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            107,
        ),
        hi: BytePos(
            116,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck7.ts:5:17
  |
5 | function* g1(): WeirdIter { }
  |                 ^^^^^^^^^

